// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with plural expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling
     
    $1,070.00
  </p>
</div>
`;

exports[`should render summary with single expense correctly 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling
     
    $1,020.00
  </p>
</div>
`;
